--- a/src/main/resources/common.conf
+++ b/src/main/resources/common.conf
@@ -27,7 +27,7 @@ application.secret="yNhI04vHs9<_HWbC`]20u`37=NGLGYY5:0Tg5?y`W<NoJnXWqmjcgZBec@rO
 cookie.encryption.key="gvBoGdgzqG1AarzF1LY0zQ=="
 
 # this key is for local development only!
-queryParameter.encryption.key=${cookie.encryption}
+queryParameter.encryption=${cookie.encryption}
 
 # this key is for local development only!
 sso.encryption.key="P5xsJ9Nt+quxGZzB4DeLfw=="
